syntax = "proto3";

option go_package = "github.com/dathuynh1108/hcmut-thexis/controller/pkg/grpc";

// The greeting service definition.
service RTSPSender {
  // Tell RTSPSender to connect to rtsp server and join sfu
  rpc Connect (ConnectRequest) returns (ConnectReply) {}
  // Tell RTSPSender to disconnect to rtsp server
  rpc Disconnect (DisconnectRequest) returns (DisconnectReply) {}
  // Tell RTSPSender to reply the file path corresponding to request
  rpc GetRecordFile(GetRecordFileRequest) returns (GetRecordFileReply) {}
}

// Connect Request from client
message ConnectRequest {
  string clientID = 1; 
  string connectClientAddress = 2;
  string username = 3;
  string password = 4;
  bool enableRTSPRelay = 5;
  bool enableRecord = 6;
}

message ConnectReplyData {
  string relayAddress = 1;
}

// Connect Reply from server
message ConnectReply {
  int32 code = 1;
  string message = 2;
  ConnectReplyData data = 3;
}

// Disconnect Request from client
message DisconnectRequest {
  string clientID = 1;
  string connectClientAddress = 2;
}

// Disconnect Reply from server
message DisconnectReply {
  int32 code = 1;
  string message = 2;
}

// GetRecordFile Request from client
message GetRecordFileRequest {
  string clientID = 1;
  int64 timestamp = 2;
}

// GetRecordFile Reply from server
message GetRecordFileReply {
  int32 code = 1;
  string message = 2;
  string filename=3;
  int64 startTime = 4;
  int64 endTime = 5;
}